[gd_scene load_steps=9 format=1]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/sprites/greg/cost1/idle.png" type="Texture" id=2]
[ext_resource path="res://sounds/dash.wav" type="Sample" id=3]
[ext_resource path="res://sounds/guard.wav" type="Sample" id=4]
[ext_resource path="res://sounds/punch.wav" type="Sample" id=5]
[ext_resource path="res://sounds/punchhit.wav" type="Sample" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.047
height = 0.681622

[sub_resource type="SampleLibrary" id=2]

samples/dash = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }
samples/guard = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }
samples/punch = { "db":0.0, "pitch":1.0, "sample":ExtResource( 5 ) }
samples/punchhit = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }

[node name="Player" type="Node2D"]

script/script = ExtResource( 1 )

[node name="body" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 1.22772, 0 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 6.3923, 0, 0, 13.354, -0.0513512, 39.5128 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Sprite" type="Sprite" parent="body"]

texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="hb" type="CollisionShape2D" parent="body"]

transform/pos = Vector2( -0.0513512, 39.5128 )
transform/scale = Vector2( 6.3923, 13.354 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="RayCast" type="RayCast2D" parent="body"]

enabled = true
exclude_parent = true
cast_to = Vector2( 65, 0 )
layer_mask = 1
type_mask = 2
__meta__ = { "_edit_lock_":true }

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="reference_hb" type="Node" parent="."]

[node name="ref-crouch" type="CollisionShape2D" parent="reference_hb"]

transform/pos = Vector2( 2.17635, 119.298 )
transform/scale = Vector2( 6.3923, 5.37762 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ref-def" type="CollisionShape2D" parent="reference_hb"]

transform/pos = Vector2( 1.17637, 39.5128 )
transform/scale = Vector2( 6.3923, 13.354 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="reference_raycast" type="Node" parent="."]

[node name="ref-def" type="RayCast2D" parent="reference_raycast"]

transform/pos = Vector2( 1.22772, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 65, 0 )
layer_mask = 1
type_mask = 2
__meta__ = { "_edit_lock_":true }

[node name="ref-crouch" type="RayCast2D" parent="reference_raycast"]

transform/pos = Vector2( 1.08856, 129.98 )
enabled = true
exclude_parent = true
cast_to = Vector2( 65, 0 )
layer_mask = 1
type_mask = 2
__meta__ = { "_edit_lock_":true }

[node name="dashtimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="dashtimetimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ejectiontimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false


